--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,10 @@
 .items-contents .txt{
     margin-left: 10px;
 }
+.inside-list{
+    display: flex;
+    justify-content: space-between;
+}
 .clear{
     background-color: rgba(237, 238, 238, 0.668);
 }
