--- a/src/style.css
+++ b/src/style.css
@@ -1,67 +1,74 @@
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-.container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
+
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-.lists{
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 1px 5px 3px 4px rgba(0, 0, 0, 0.1);
-    margin-top: 24px;
+
+.lists {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 1px 5px 3px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 24px;
 }
-.lists ul{
-    width: 100%;
-    list-style: none;
-    
+
+.lists ul {
+  width: 100%;
+  list-style: none;
 }
-.lists ul .todo-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 15px;   
+
+.lists ul .todo-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 15px;
 }
-.lists ul li{
-    padding: 10px;
-    border-bottom: 1px solid rgb(230, 226, 226);
+
+.lists ul li {
+  padding: 10px;
+  border-bottom: 1px solid rgb(230, 226, 226);
 }
-.inputs input{
-    border: none;
-   
-    padding: 5px;
+
+.inputs input {
+  border: none;
+  padding: 5px;
 }
-.inputs input[placeholder]{
-    font-style: italic;
+
+.inputs input[placeholder] {
+  font-style: italic;
 }
-.inputs input[type=text]:focus{
+
+.inputs input[type=text]:focus {
   outline: none;
 }
-.items{
-    display: flex;
-    justify-content: space-between;
+
+.items,
+.inside-list {
+  display: flex;
+  justify-content: space-between;
 }
-.items-contents{
-    display: flex;
-    align-items: center;
-    align-self: center;
-    justify-content: center;
+
+.items-contents {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
 }
-.items-contents .txt{
-    margin-left: 10px;
+
+.items-contents .txt {
+  margin-left: 10px;
 }
-.inside-list{
-    display: flex;
-    justify-content: space-between;
+
+.clear {
+  background-color: rgba(237, 238, 238, 0.668);
 }
-.clear{
-    background-color: rgba(237, 238, 238, 0.668);
-}
-.clear p{
-    text-align: center;
+
+.clear p {
+  text-align: center;
 }
